--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
-    "sequelize": "^6.37.4",
-    "typescript": "^5.6.2"
+    "sequelize": "^6.37.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@types/express": "^5.0.0",
     "eslint": "^9.12.0",
     "globals": "^15.10.0",
-    "sequelize-cli": "^6.6.2",
-    "typescript-eslint": "^8.8.1"
+    "sequelize-cli": "^6.6.2"
   }
 }
